--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</div>
 
 			<div class="buttons">
-				<a class="invite" href="Invite.pdf">INVITE</a>
+				<a class="invite" href="register.html">INVITE</a>
 				<a class="register" href="register.html">REGISTER</a>
 
 			</div>
@@ -126,14 +126,13 @@
 				<p>Overclock your cells and ryze up to the challenge to be the king of X-86 </p>
 
 				<p>
-					Photos exhibit a story that cannot be put into words.This event is for those who wish to share their story through a digital medium. <br>
-					The topic will be declared at the venue of the event. 
+					 The event will consist of multiple online rounds which will test your depth in various categories
 
 				</p>
 
 				<p><span>CATEGORY : </span>OPEN</p>
 				<p><span>NO. OF PARTICIPANTS PER TEAM : </span>1</p>
-				<p><span>NO. OF TEAMS PER SCHOOL : </span>1</p>
+				<p><span>NO. OF TEAMS PER SCHOOL : </span>2</p>
 			</div>
 		</div>
 
